# Cartoland-Python

./: .gitignore  debug.bat  pyproject.toml  run.bat
.github/: mistaken-pull-closer.yml
src/bot/: main.py  test.py
src/bot/config/: user_lang.json
src/bot/config/lang/: hk.json  ta.json  tw.json
src/bot/extensions/: bot_admin.py  minecraft.py
src/test/fetch_lang_file/: main.py
src/test/fetch_lang_file/result/: cn.json  en.json
