[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "github/Mango-Discord-Project", email = ""},
]
dependencies = [
    "py-cord>=2.3.2",
    "python-dotenv>=0.21.1",
    "pretty-errors>=1.2.25",
    "rich>=13.3.1",
    "requests>=2.28.2",
]
requires-python = ">=3.11"
license = {text = "AGPL v3.0"}
